# tg_google_meet_bot

./: .env.example  .gitignore  Cargo.toml  README.md  privacy_policy  privacy_policy.zh
src/: auth.rs  event.rs  lib.rs  main.rs  time.rs  utils.rs
