[package]
name = "ash_meet_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
duration-str = { version = "0.7.1", default-features = false, features = ["chrono"] }
google-calendar3 = "5.0.3"
rand = "0.8.5"
serde_json = "1.0.114"
teloxide = { version = "0.12.2", features = ["ctrlc_handler", "macros"] }
thiserror = "1.0.58"
tokio = { version = "1.36.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
test-case = "3.3.1"

[profile.release]
opt-level = 3
strip = true
lto = true
panic = "abort"
